Kickoff unit testing

--- a/HelloTypeScript/SpecRunner.html
+++ b/HelloTypeScript/SpecRunner.html
@@ -14,7 +14,7 @@
 
     </script>
     <script type="text/javascript"
-            src="./01_SimpleJasmineTests.js">
+            src="./SimpleJasmineTests.js">
     </script>
 </head>
 <body>
