--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -1,11 +1,26 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
-    <script src="app.js"></script>
+    <link rel="stylesheet" type="text/css"
+          href="./node_modules/jasmine-core/lib/jasmine-core/jasmine.css" />
+    <script type="text/javascript"
+            src="./node_modules/jasmine-core/lib/jasmine-core/jasmine.js">
+
+    </script>
+    <script type="text/javascript"
+            src="./node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js">
+    </script>
+    <script type="text/javascript"
+            src="./node_modules/jasmine-core/lib/jasmine-core/boot.js">
+
+    </script>
+    <script type="text/javascript"
+            src="./SimpleJasmineTests.js">
+    </script>
+    <script type="text/javascript"
+            src="./Types.js">
+    </script>
+
 </head>
 <body>
-    <div id="content"></div>
 </body>
 </html> 
