--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -19,7 +19,9 @@
     <script type="text/javascript"
             src="./Types.js">
     </script>
-
+    <script type="text/javascript"
+            src="./Functions.js">
+    </script>
 </head>
 <body>
 </body>
