--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -22,6 +22,9 @@
     <script type="text/javascript"
             src="./Functions.js">
     </script>
+    <script type="text/javascript"
+            src="./AdvancedTypes.js">
+    </script>
 </head>
 <body>
 </body>
