--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -25,6 +25,9 @@
     <script type="text/javascript"
             src="./AdvancedTypes.js">
     </script>
+    <script type="text/javascript"
+            src="./Interfaces.js">
+    </script>
 </head>
 <body>
 </body>
