--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -28,6 +28,9 @@
     <script type="text/javascript"
             src="./Interfaces.js">
     </script>
+    <script type="text/javascript"
+            src="./Classes.js">
+    </script>
 </head>
 <body>
 </body>
