--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -31,6 +31,9 @@
     <script type="text/javascript"
             src="./Classes.js">
     </script>
+    <script type="text/javascript"
+            src="./Inheritance.js">
+    </script>
 </head>
 <body>
 </body>
