--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -34,6 +34,9 @@
     <script type="text/javascript"
             src="./Inheritance.js">
     </script>
+    <script type="text/javascript"
+            src="./Decorators.js">
+    </script>
 </head>
 <body>
 </body>
