--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -37,6 +37,9 @@
     <script type="text/javascript"
             src="./Decorators.js">
     </script>
+    <script type="text/javascript"
+            src="./Generics.js">
+    </script>
 </head>
 <body>
 </body>
