--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -40,6 +40,9 @@
     <script type="text/javascript"
             src="./Generics.js">
     </script>
+    <script type="text/javascript"
+            src="./Asynchronous.js">
+    </script>
 </head>
 <body>
 </body>
