--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -43,6 +43,16 @@
     <script type="text/javascript"
             src="./Asynchronous.js">
     </script>
+    <script type="text/javascript">
+        var CONTACT_EMAIL_ARRAY = [
+            "help@site.com",
+            "contactus@site.com",
+            "webmaster@site.com"
+        ];
+    </script>
+    <script type="text/javascript"
+            src="./GlobalVariables.js">
+    </script>
 </head>
 <body>
 </body>
