--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -53,6 +53,12 @@
     <script type="text/javascript"
             src="./GlobalVariables.js">
     </script>
+    <script type="text/javascript"
+            src="./DeclarationFile.js">
+    </script>
+    <script type="text/javascript"
+            src="./ErrorHelper.js">
+    </script>
 </head>
 <body>
 </body>
