--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -14,7 +14,7 @@
 
     </script>
     <script type="text/javascript"
-            src="./SimpleJasmineTests.js">
+            src="./SomeTests.js">
     </script>
     <script type="text/javascript"
             src="./Types.js">
