--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -59,6 +59,9 @@
     <script type="text/javascript"
             src="./ErrorHelper.js">
     </script>
+    <script type="text/javascript"
+            src="./Dict.js">
+    </script>
 </head>
 <body>
 </body>
