--- a/HelloTypeScript/index.html
+++ b/HelloTypeScript/index.html
@@ -62,6 +62,9 @@
     <script type="text/javascript"
             src="./Dict.js">
     </script>
+    <script type="text/javascript"
+            src="./Map.js">
+    </script>
 </head>
 <body>
 </body>
